Fix vertical alignment for consecutive labels (#893)
Fixes a problem where multiple labels right after a heading are vertically misaligned.

Closes #751.

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -219,7 +219,7 @@
       margin-top: 1em;
     }
 
-    + p {
+    + p:not(.label) {
       margin-top: 0;
     }
   }
